--- a/my-project/templates/product_category/show.html.twig
+++ b/my-project/templates/product_category/show.html.twig
@@ -27,6 +27,12 @@
                 <th>DateOfLastModification</th>
                 <td>{{ product_category.dateOfLastModification ? product_category.dateOfLastModification|date('Y-m-d') : '' }}</td>
             </tr>
+            <tr>
+                <th>All products</th>
+                {% for product in product_category.products %}
+                <td><a href="{{ path('product_show',{'id':product.id}) }}">product.name </a></td>
+                {% endfor %}
+            </tr>
         </tbody>
     </table>
 
