added flash messages and autofilling dates and relations between Product and ProductCategory, added posibility of assigning category to product, edited product view (added category link to it), edited ProductCategory view (added list of products to it)

--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -20,6 +20,10 @@
                 <td>{{ product.info }}</td>
             </tr>
             <tr>
+                <th>Category</th>
+                <td><a href="{{ path('product_category_show', {'id': product.category.id}) }}">{{  product.category.name }}</a></td>
+            </tr>
+            <tr>
                 <th>CreatedDate</th>
                 <td>{{ product.createdDate ? product.createdDate|date('Y-m-d') : '' }}</td>
             </tr>
