--- a/my-project/templates/product_category/edit.html.twig
+++ b/my-project/templates/product_category/edit.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Edit ProductCategory{% endblock %}
 
 {% block body %}
+    {% for message in app.flashes('notice') %}
+        <div style="background: greenyellow; ">
+            {{ message }}
+        </div>
+    {% endfor %}
     <h1>Edit ProductCategory</h1>
 
     {{ include('product_category/_form.html.twig', {'button_label': 'Update'}) }}
