--- a/my-project/templates/product_category/index.html.twig
+++ b/my-project/templates/product_category/index.html.twig
@@ -10,6 +10,12 @@
         </div>
     {% endfor %}
 
+    {% for message in app.flashes('error') %}
+        <div style="background: greenyellow; ">
+            {{ message }}
+        </div>
+    {% endfor %}
+
     <h1>ProductCategory index</h1>
 
     <table class="table">
