--- a/my-project/templates/menu/menu.html.twig
+++ b/my-project/templates/menu/menu.html.twig
@@ -5,6 +5,12 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
+        <ul class="navbar-nav mr-auto">
+            {% for category in category_service.getAllCategory() %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('product_category_show', {'id': category.id}) }}">{{ category.name }}</a>
+                </li>
+            {% endfor %}
+        </ul>
     </div>
 </nav>
