--- a/my-project/templates/product/index.html.twig
+++ b/my-project/templates/product/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Product index{% endblock %}
+{% block title %}Products List{% endblock %}
 
 {% block body %}
     <h1>Product index</h1>
