--- a/my-project/templates/product_category/index.html.twig
+++ b/my-project/templates/product_category/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ProductCategory index{% endblock %}
+{% block title %}Categories list{% endblock %}
 
 {% block body %}
 
