--- a/my-project/templates/base.html.twig
+++ b/my-project/templates/base.html.twig
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+/**
+* VI-31
+*
+* @category   Virtua
+* @package    Virtua_Module
+* @copyright  Copyright (c) Virtua
+* @author     Name <m.sobon@wearevirtua.com>
+*/
+
 <html>
     <head>
         <meta charset="UTF-8">
