--- a/my-project/templates/index/index.html.twig
+++ b/my-project/templates/index/index.html.twig
@@ -1,3 +1,11 @@
+/**
+* VI-31
+*
+* @category   Virtua
+* @package    Virtua_Module
+* @copyright  Copyright (c) Virtua
+* @author     Name <m.sobon@wearevirtua.com>
+*/
 {% extends 'base.html.twig' %}
 {% block title %}HelloB{% endblock %}
 
