--- a/my-project/templates/product_category/edit.html.twig
+++ b/my-project/templates/product_category/edit.html.twig
@@ -1,3 +1,12 @@
+/**
+* VI-31
+*
+* @category   Virtua
+* @package    Virtua_Module
+* @copyright  Copyright (c) Virtua
+* @author     Name <m.sobon@wearevirtua.com>
+*/
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Edit {{ product_category.name }} Category{% endblock %}
