Fixed bug with author etc. in twig templates

--- a/my-project/templates/base.html.twig
+++ b/my-project/templates/base.html.twig
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-/**
-* VI-31
-*
-* @category   Virtua
-* @package    Virtua_Module
-* @copyright  Copyright (c) Virtua
-* @author     Name <m.sobon@wearevirtua.com>
-*/
+{#/**#}
+{#* VI-31#}
+{#*#}
+{#* @category   Virtua#}
+{#* @package    Virtua_Module#}
+{#* @copyright  Copyright (c) Virtua#}
+{#* @author     Name <m.sobon@wearevirtua.com>#}
+{#*/#}
 
 <html>
     <head>
