--- a/my-project/templates/product_category/_form.html.twig
+++ b/my-project/templates/product_category/_form.html.twig
@@ -1,11 +1,11 @@
-/**
-* VI-31
-*
-* @category   Virtua
-* @package    Virtua_Module
-* @copyright  Copyright (c) Virtua
-* @author     Name <m.sobon@wearevirtua.com>
-*/
+{#/**#}
+{#* VI-31#}
+{#*#}
+{#* @category   Virtua#}
+{#* @package    Virtua_Module#}
+{#* @copyright  Copyright (c) Virtua#}
+{#* @author     Name <m.sobon@wearevirtua.com>#}
+{#*/#}
 
 {{ form_start(form) }}
     {{ form_widget(form) }}
