--- a/my-project/templates/product_category/_delete_form.html.twig
+++ b/my-project/templates/product_category/_delete_form.html.twig
@@ -1,11 +1,11 @@
-/**
-* VI-31
-*
-* @category   Virtua
-* @package    Virtua_Module
-* @copyright  Copyright (c) Virtua
-* @author     Name <m.sobon@wearevirtua.com>
-*/
+{#/**#}
+{#* VI-31#}
+{#*#}
+{#* @category   Virtua#}
+{#* @package    Virtua_Module#}
+{#* @copyright  Copyright (c) Virtua#}
+{#* @author     Name <m.sobon@wearevirtua.com>#}
+{#*/#}
 
 <form method="post" action="{{ path('product_category_delete', {'id': product_category.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
