VI-36 Added FileUploaderService

--- a/my-project/templates/product_category/show.html.twig
+++ b/my-project/templates/product_category/show.html.twig
@@ -13,7 +13,7 @@
 
 {% block body %}
     <h1>ProductCategory</h1>
-
+    <img src="{{ asset('uploads/images/' ~ product_category.mainImage) }}" class="img-thumbnail">
     <table class="table">
         <tbody>
             <tr>
