--- a/my-project/templates/menu/menu.html.twig
+++ b/my-project/templates/menu/menu.html.twig
@@ -1,11 +1,11 @@
-{#/**#}
-{#* VI-31#}
-{#*#}
-{#* @category   Virtua#}
-{#* @package    Virtua_Module#}
-{#* @copyright  Copyright (c) Virtua#}
-{#* @author     Name <m.sobon@wearevirtua.com>#}
-{#*/#}
+/**
+* Module
+*
+* @category   Virtua
+* @package    Virtua_Module
+* @copyright  Copyright (c) Virtua
+* @author     Dawid Kruczek
+*/
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="{{ path('product_category_index') }}">MainPage</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,3 +21,4 @@
         </ul>
     </div>
 </nav>
+
