--- a/my-project/templates/base.html.twig
+++ b/my-project/templates/base.html.twig
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 {#/**#}
-{#* VI-31#}
+{#* VI-31 BaseTemplate#}
 {#*#}
-{#* @category   Virtua#}
-{#* @package    Virtua_Module#}
+{#* @category   Templates#}
+{#* @package    Virtua_BaseTemplate#}
 {#* @copyright  Copyright (c) Virtua#}
 {#* @author     Name <m.sobon@wearevirtua.com>#}
 {#*/#}
