--- a/my-project/templates/index/index.html.twig
+++ b/my-project/templates/index/index.html.twig
@@ -1,8 +1,8 @@
 {#/**#}
-{#* VI-31#}
+{#* VI-31 FirstApp#}
 {#*#}
-{#* @category   Virtua#}
-{#* @package    Virtua_Module#}
+{#* @category   FirstApp#}
+{#* @package    Virtua_FirstApp#}
 {#* @copyright  Copyright (c) Virtua#}
 {#* @author     Name <m.sobon@wearevirtua.com>#}
 {#*/#}
