--- a/my-project/templates/product_category/_edit_form.html.twig
+++ b/my-project/templates/product_category/_edit_form.html.twig
@@ -1,8 +1,8 @@
 {#/**#}
-{#* VI-36#}
+{#* VI-36 ProductCategoryEditForm#}
 {#*#}
-{#* @category   Virtua#}
-{#* @package    Virtua_Module#}
+{#* @category   ProductCategory#}
+{#* @package    Virtua_EditProductCategory#}
 {#* @copyright  Copyright (c) Virtua#}
 {#* @author     Name <m.sobon@wearevirtua.com>#}
 {#*/#}
@@ -31,7 +31,5 @@
             method: 'POST',
             body: dataForm
         });
-        //console.log(new FormData(addImageForm).has('image[path]'));
-        //console.log(addImageForm);
     });
 </script>
