--- a/my-project/templates/product_category/addImages.html.twig
+++ b/my-project/templates/product_category/addImages.html.twig
@@ -1,8 +1,8 @@
 {#/**#}
-{#* VI-36#}
+{#* VI-36 AddCategoryImage#}
 {#*#}
-{#* @category   Virtua#}
-{#* @package    Virtua_Module#}
+{#* @category   CategoryImages#}
+{#* @package    Virtua_AddCategoryImage#}
 {#* @copyright  Copyright (c) Virtua#}
 {#* @author     Name <m.sobon@wearevirtua.com>#}
 {#*/#}
