--- a/my-project/templates/product_category/edit.html.twig
+++ b/my-project/templates/product_category/edit.html.twig
@@ -1,8 +1,8 @@
 {#/**#}
-{#* VI-31#}
+{#* VI-31 ProdcutCategoryEdit#}
 {#*#}
-{#* @category   Virtua#}
-{#* @package    Virtua_Module#}
+{#* @category   ProductCategory#}
+{#* @package    Virtua_ProductCategoryEdit#}
 {#* @copyright  Copyright (c) Virtua#}
 {#* @author     Name <m.sobon@wearevirtua.com>#}
 {#*/#}
