--- a/my-project/templates/product_category/index.html.twig
+++ b/my-project/templates/product_category/index.html.twig
@@ -35,6 +35,7 @@
                 <th>Description</th>
                 <th>DateOfCreation</th>
                 <th>DateOfLastModification</th>
+                <th>Image</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -46,6 +47,7 @@
                 <td>{{ product_category.description }}</td>
                 <td>{{ product_category.dateOfCreation ? product_category.dateOfCreation|date('Y-m-d') : '' }}</td>
                 <td>{{ product_category.dateOfLastModification ? product_category.dateOfLastModification|date('Y-m-d') : '' }}</td>
+                <td><img src="{{ asset('uploads/images/' ~ product_category.mainImage) }}" class="img-thumbnail img-100"></td>
                 <td>
                     <a href="{{ path('product_category_show', {'id': product_category.id}) }}">show</a>
                     <a href="{{ path('product_category_edit', {'id': product_category.id}) }}">edit</a>
