Added removing image from gallery mechanism

--- a/my-project/templates/product_category/show.html.twig
+++ b/my-project/templates/product_category/show.html.twig
@@ -14,9 +14,10 @@
 {% block body %}
     <h1>ProductCategory</h1>
     {% for image in product_category.images %}
-        <img class="img-thumbnail img-250" src="{{ asset('uploads/images/' ~ image.path) }}">
+        <div onclick="RemoveImageFromCategory('{{ path('remove_image_from_category', {'image': image.id, 'category': product_category.id}) }}', this)">
+            <img class="img-thumbnail img-250" src="{{ asset('uploads/images/' ~ image.path) }}">
+        </div>
     {% endfor %}
-    {#<img src="{{ asset('uploads/images/' ~ product_category.mainImage) }}" class="img-thumbnail">#}
 
     <table class="table">
         <tbody>
@@ -52,4 +53,22 @@
     <a href="{{ path('product_category_index') }}">back to list</a>
     <a href="{{ path('product_category_edit', {'id': product_category.id}) }}">edit</a>
     {{ include('product_category/_delete_form.html.twig') }}
+
+
+<script>
+    function RemoveImageFromCategory(path, img)
+    {
+        console.log(path)
+        const response = fetch(path ,{
+            method: "DELETE"
+        });
+        response
+        .then((response)=>{
+            img.remove();
+        });
+
+
+    }
+</script>
+
 {% endblock %}
