--- a/my-project/public/css/Shared/coreStyle.css
+++ b/my-project/public/css/Shared/coreStyle.css
@@ -14,3 +14,23 @@
 .img-250{
     width: 250px;
 }
+
+.img-container{
+    position: relative;
+    display: inline-block;
+}
+
+.img-close-x{
+    position: absolute;
+    top: 10px;
+    right: 15px;
+}
+
+.btn-danger-opacity{
+    background: #dc3545;
+    opacity: 0.3;
+}
+
+.btn-danger-opacity:hover{
+    opacity: 1;
+}
