--- a/my-project/templates/product_category/show.html.twig
+++ b/my-project/templates/product_category/show.html.twig
@@ -14,7 +14,8 @@
 {% block body %}
     <h1>ProductCategory</h1>
     {% for image in product_category.images %}
-        <div onclick="RemoveImageFromCategory('{{ path('remove_image_from_category', {'image': image.id, 'category': product_category.id}) }}', this)">
+        <div class="img-container">
+            <div class="img-close-x btn btn-sm btn-danger-opacity" onclick="RemoveImageFromCategory('{{ path('remove_image_from_category', {'image': image.id, 'category': product_category.id}) }}', this.parentElement)">X</div>
             <img class="img-thumbnail img-250" src="{{ asset('uploads/images/' ~ image.path) }}">
         </div>
     {% endfor %}
@@ -55,20 +56,9 @@
     {{ include('product_category/_delete_form.html.twig') }}
 
 
-<script>
-    function RemoveImageFromCategory(path, img)
-    {
-        console.log(path)
-        const response = fetch(path ,{
-            method: "DELETE"
-        });
-        response
-        .then((response)=>{
-            img.remove();
-        });
+{% endblock %}
 
-
-    }
-</script>
-
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset("js/ProductCategoryScripts/Shared.js") }}"></script>
 {% endblock %}
