--- a/my-project/templates/product_category/_edit_form.html.twig
+++ b/my-project/templates/product_category/_edit_form.html.twig
@@ -9,7 +9,9 @@
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 
 {{ form_start(form) }}
-    {{ form_widget(form) }}
+    {{ form_row(form.name) }}
+    {{ form_row(form.description) }}
+    {{ form_row(form.mainImage) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
 
