--- a/my-project/templates/product_category/index.html.twig
+++ b/my-project/templates/product_category/index.html.twig
@@ -14,14 +14,20 @@
 {% block body %}
 
     {% for message in app.flashes('notice') %}
-        <div style="background: greenyellow; ">
+        <div class="alert alert-success alert-dismissible fade show">
             {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
         </div>
     {% endfor %}
 
     {% for message in app.flashes('error') %}
-        <div style="background: greenyellow; ">
+        <div class="alert alert-danger alert-dismissible fade show">
             {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
         </div>
     {% endfor %}
 
