--- a/my-project/templates/product_category/_edit_form.html.twig
+++ b/my-project/templates/product_category/_edit_form.html.twig
@@ -20,9 +20,9 @@
 {{ include('product_category/_delete_form.html.twig') }}
 
 {%  set route =  path('UploadAndAddImageToCategory', {'id': product_category.id}) %}
-{% set quote = "\"" %}
-{{ form_start(imageForm, { 'attr' : { 'onsubmit' : 'return onSubmitEditForm('~quote~route~quote~')' }}) }}
+{{ form_start(imageForm, { 'attr' : { 'onsubmit' : 'return onSubmitEditForm()' }}) }}
     {{ form_widget(imageForm) }}
+    <input type="hidden" name="_url" id="_url" value="{{ route }}">
     <button class="btn btn-success">{{ button_label|default('Add Image to category') }}</button>
 {{ form_end(imageForm) }}
 
