--- a/my-project/templates/product_category/show.html.twig
+++ b/my-project/templates/product_category/show.html.twig
@@ -48,7 +48,10 @@
             <tr>
                 <th>Products in this category</th>
                 {% for product in product_category.products %}
-                    <td><a href="{{ path( 'product_show' , { 'id': product.id} ) }}"> {{ product.name }}</a></td>
+                    <td>
+                        <a href="{{ path( 'product_show' , { 'id': product.id} ) }}"> {{ product.name }}</a>
+                        <a class="btn btn-success" href="{{ path('WishListNew', {'productId': product.id}) }}">Add to WishList</a>
+                    </td>
                 {% endfor %}
             </tr>
         </tbody>
