--- a/my-project/templates/wish_list/index.html.twig
+++ b/my-project/templates/wish_list/index.html.twig
@@ -1,3 +1,12 @@
+{#/**#}
+{#* VI-40 WishListController#}
+{#*#}
+{#* @category   WishList#}
+{#* @package    Virtua_WishList#}
+{#* @copyright  Copyright (c) Virtua#}
+{#* @author     Mateusz Soboń <m.sobon@wearevirtua.com>#}
+{#*/#}
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello {{ controller_name }}!{% endblock %}
