--- a/my-project/templates/wish_list/index.html.twig
+++ b/my-project/templates/wish_list/index.html.twig
@@ -21,6 +21,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Image</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -29,6 +30,9 @@
                         <td><a href="{{ path('product_show', { 'id': wish.id}) }}">{{ wish.name }}</a></td>
                         {#<td><img src="{{ asset('uploads/images'~TODO: ADD PATH WHEN IT BE AVAILABLE) }}"></td>#}
                         <td><img class="img-100" src="{{ asset('uploads/images/categoryPlaceholder.jpg') }}"></td>
+                        <td>
+                            <a class="btn btn-danger" href="{{ path('WishListDelete', { 'id': wish.id }) }}">Delete</a>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
