--- a/my-project/templates/wish_list/index.html.twig
+++ b/my-project/templates/wish_list/index.html.twig
@@ -15,7 +15,7 @@
     {% if wish_list is empty %}
         <div class="alert alert-primary">Your wish list is empty, go to <a href="{{ path('product_category_index') }}">main category page</a> if you want add something</div>
     {% elseif wish_list is not empty%}
-        <a class="btn btn-danger" href="{{ path('WishListDeleteAll') }}">Delete Them All!</a>
+        <a onclick="return deleteConfirm()" class="btn btn-danger" href="{{ path('WishListDeleteAll') }}">Delete Them All!</a>
         <table class="table">
             <thead>
                 <tr>
@@ -31,11 +31,16 @@
                         {#<td><img src="{{ asset('uploads/images'~TODO: ADD PATH WHEN IT BE AVAILABLE) }}"></td>#}
                         <td><img class="img-100" src="{{ asset('uploads/images/categoryPlaceholder.jpg') }}"></td>
                         <td>
-                            <a class="btn btn-danger" href="{{ path('WishListDelete', { 'id': wish.id }) }}">Delete</a>
+                            <a onclick="return deleteConfirm()" class="btn btn-danger" href="{{ path('WishListDelete', { 'id': wish.id }) }}">Delete</a>
                         </td>
                     </tr>
                 {% endfor %}
             </tbody>
         </table>
     {% endif %}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset("js/Shared/coreScripts.js") }}"></script>
 {% endblock %}
