Added restriction to max 5 wies.

--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -3,8 +3,8 @@
 {% block title %}{{ product.name }}{% endblock %}
 
 {% block body %}
+    {{ include("Shared/dismissibleFlashMessages.html.twig") }}
     <h1>Product</h1>
-
     <table class="table">
         <tbody>
             <tr>
