--- a/my-project/templates/product_category/show.html.twig
+++ b/my-project/templates/product_category/show.html.twig
@@ -12,7 +12,7 @@
 {% block title %}{{ product_category.name }}{% endblock %}
 
 {% block body %}
-
+    {{ include("Shared/dismissibleFlashMessages.html.twig") }}
     <div id="flashMessage-container"></div>
 
     <h1>ProductCategory</h1>
