--- a/my-project/templates/wish_list/index.html.twig
+++ b/my-project/templates/wish_list/index.html.twig
@@ -12,6 +12,7 @@
 {% block title %}Your wishes{% endblock %}
 
 {% block body %}
+    {{ include("Shared/dismissibleFlashMessages.html.twig") }}
     {% if wish_list is empty %}
         <div class="alert alert-primary">Your wish list is empty, go to <a href="{{ path('product_category_index') }}">main category page</a> if you want add something</div>
     {% elseif wish_list is not empty%}
