--- a/my-project/templates/register/index.html.twig
+++ b/my-project/templates/register/index.html.twig
@@ -1,3 +1,11 @@
+{#/**#}
+{#* VI-55 UserTemplate#}
+{#*#}
+{#* @category   Template#}
+{#* @package    Virtua_Registration#}
+{#* @copyright  Copyright (c) Virtua#}
+{#* @author     Mateusz Soboń <m.sobon@wearevirtua.com>#}
+{#*/#}
 {% extends 'base.html.twig' %}
 
 {% block title %}Registration{% endblock %}
