--- a/my-project/templates/security/index.html.twig
+++ b/my-project/templates/security/index.html.twig
@@ -1,3 +1,11 @@
+{#/**#}
+{#* VI-56 Login#}
+{#*#}
+{#* @category   SecurityController#}
+{#* @package    Virtua_Login#}
+{#* @copyright  Copyright (c) Virtua#}
+{#* @author     Mateusz Soboń <m.sobon@wearevirtua.com>#}
+{#*/#}
 {% extends 'base.html.twig' %}
 
 {% block title %}Login{% endblock %}
