--- a/my-project/templates/security/index.html.twig
+++ b/my-project/templates/security/index.html.twig
@@ -1,7 +1,7 @@
 {#/**#}
 {#* VI-56 Login#}
 {#*#}
-{#* @category   SecurityController#}
+{#* @category   SecurityTemplate#}
 {#* @package    Virtua_Login#}
 {#* @copyright  Copyright (c) Virtua#}
 {#* @author     Mateusz Soboń <m.sobon@wearevirtua.com>#}
