--- a/my-project/templates/product/edit.html.twig
+++ b/my-project/templates/product/edit.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link href="{{ asset('css/edit.css') }}" rel="stylesheet" />
+    <link href="{{ asset('css/show.css') }}" rel="stylesheet" />
+{% endblock %}
 {% block title %}Edit {{ product.name }} Product{% endblock %}
 
 {% block body %}
@@ -9,12 +14,23 @@
                 {{ message }}
             </div>
         {% endfor %}
+
+
     {% endfor %}
-    <h1>Edit Product</h1>
 
-    {{ include('product/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('product_index') }}">back to list</a>
+    <h1>Edytuj produkt</h1>
+
+    <div class="col-md-4 col-md-4_custom">
+        <img src="{{ asset('uploads/brochures/' ~ product.picture) }}"/>
+    </div>
+
+    <div class="col-md-8 col-md-8_custom">
+        {{ include('product/_form.html.twig', {'button_label': 'Update'}) }}
+    </div>
+
+
+    <a href="{{ path('product_index') }}"><button type="submit" class="btn btn-info buttontable buttontable_edit">Wroc do listy produktow</button></a>
 
     {{ include('product/_delete_form.html.twig') }}
 {% endblock %}
