--- a/my-project/templates/product/_delete_form.html.twig
+++ b/my-project/templates/product/_delete_form.html.twig
@@ -1,5 +1,8 @@
+{% block stylesheets %}
+    <link href="{{ asset('/css/base.css') }}" rel="stylesheet">
+{% endblock %}
 <form method="post" action="{{ path('product_delete', {'id': product.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger buttontable">Delete</button>
 </form>
