--- a/my-project/templates/product/_form.html.twig
+++ b/my-project/templates/product/_form.html.twig
@@ -1,4 +1,16 @@
+{% import _self as formMacros %}
+{%  macro d(form) %}
+    <input type="file" class="form-control" name="photo__name__" required>
+{% endmacro %}
+
+{% form_theme form 'bootstrap_4_layout.html.twig' %}
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+   {# <div id="images" data-prototype="{{ formMacros.d(form.images.vars.prototype)|e }}">
+        {% for image in form.images %}
+            {{ formMacros.d(form) }}
+        {%  endfor %}
+    <button class="add-another-collection-widget">Dodaj nowe obrazki</button>
+    </div> #}
+    <button type="submit"  class="btn btn-primary">Zapisz</button>
 {{ form_end(form) }}
