--- a/my-project/templates/product/new.html.twig
+++ b/my-project/templates/product/new.html.twig
@@ -1,9 +1,24 @@
 {% extends 'base.html.twig' %}
+{% block stylesheets %}
+    {{ parent() }}
 
-{% block title %}New Product{% endblock %}
+    <link href="{{ asset('/css/new.css') }}" rel="stylesheet">
+{% endblock %}
+{% block title %}Dodaj nowy produkt{% endblock %}
 
 {% block body %}
-    <h1>Create new Product</h1>
+
+    {% for msg in app.session.flashBag.get('error') %}
+        <div class="flash-error">
+            {{ msg }}
+        </div>
+    {% endfor %}
+    <h1>Stworz nowy produkt</h1>
          {{ include('product/_form.html.twig') }}
-    <a href="{{ path('product_index') }}">back to list</a>
+    <a href="{{ path('product_index') }}"><button type="submit" class="btn btn-info">Wroc do listy produktow</button></a>
+
+    {% block javascripts %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="/js/addImages.js"></script>
+    {% endblock %}
 {% endblock %}
