--- a/my-project/templates/product_category/show.html.twig
+++ b/my-project/templates/product_category/show.html.twig
@@ -51,16 +51,14 @@
         <span>
             {% if viewType == "list" %}
                 <a class="btn btn-primary" href="{{ path("product_category_show", { 'id': product_category.id }) }}?viewType=grid">Show grid</a>
-            {% endif %}
-            {% if viewType == "grid" %}
+            {% else %}
                 <a class="btn btn-primary" href="{{ path("product_category_show", { 'id': product_category.id }) }}"> Show list</a>
             {% endif %}
         </span>
     </h3>
     {% if viewType == "list" %}
         {{ include("product_category/_product_list.html.twig") }}
-    {% endif %}
-    {% if viewType == "grid" %}
+    {% else %}
         {{ include("product_category/_product_grid.html.twig") }}
     {% endif %}
 
