Now user can change number of columns

--- a/my-project/templates/product_category/_product_grid.html.twig
+++ b/my-project/templates/product_category/_product_grid.html.twig
@@ -13,3 +13,7 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/productCategory/product_category_grid.css') }}">
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('js/Shared/coreScripts.js') }}"></script>
+{% endblock %}
