--- a/my-project/templates/menu/menu.html.twig
+++ b/my-project/templates/menu/menu.html.twig
@@ -19,6 +19,11 @@
                 </li>
             {% endfor %}
         </ul>
+        {% if is_granted('ROLE_USER') %}
+            <a href="{{ logout_path() }}" class="mr-sm-2 btn btn-dark">Logout</a>
+        {% else %}
+            <a href="{{ path('login') }}" class="mr-sm-2 btn btn-info">Login</a>
+        {% endif %}
     </div>
 </nav>
 
