--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -16,7 +16,7 @@
     <h1>{{ product.name }}</h1>
     <div class="col-md-12 col-md-12_custom">
     <div class="col-md-4 col-md-4_custom">
-        <img class="MainImage" src="{{ asset('uploads/brochures/' ~ product.picture) }}"/>
+        <img class="MainImage" src="{{ asset('uploads/product_images/' ~ product.picture) }}"/>
     </div>
      <div class="col-md-8 col-md-8_custom">
        <table class="table">
