--- a/my-project/templates/product/_delete_form.html.twig
+++ b/my-project/templates/product/_delete_form.html.twig
@@ -1,7 +1,7 @@
 {#/**#}
-{#*#}
-{#* @category   ProductCategory#}
-{#* @package    Virtua_DeleteProductCategory#}
+{#* VI-44 - Add and Edit gallery#}
+{#* @category   Template#}
+{#* @package    Gallery#}
 {#* @copyright  Copyright (c) Virtua#}
 {#* @author     Dawid Kruczek#}
 {#*/#}
