--- a/my-project/templates/product/index.html.twig
+++ b/my-project/templates/product/index.html.twig
@@ -1,5 +1,11 @@
+{#/**#}
+{#* VI-44 - Add and Edit gallery#}
+{#* @category   Template#}
+{#* @package    Gallery#}
+{#* @copyright  Copyright (c) Virtua#}
+{#* @author     Dawid Kruczek#}
+{#*/#}
 {% extends 'base.html.twig' %}
-
 {% block title %}Products List{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
