--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -1,7 +1,7 @@
 {#/**#}
-{#*#}
-{#* @category   ProductCategory#}
-{#* @package    Virtua_DeleteProductCategory#}
+{#* VI-44 - Add and Edit gallery#}
+{#* @category   Template#}
+{#* @package    Gallery#}
 {#* @copyright  Copyright (c) Virtua#}
 {#* @author     Dawid Kruczek#}
 {#*/#}
@@ -95,6 +95,5 @@
     </table>
     <a href="{{ path('product_index') }}"><button type="submit" class="btn btn-info buttontable">Back to list</button></a>
     <a href="{{ path('product_edit', {'id': product.id}) }}"><button type="submit" class="btn btn-warning buttontable">Edit</button></a>
-
     {{ include('product/_delete_form.html.twig') }}
 {% endblock %}
