--- a/my-project/templates/product/new.html.twig
+++ b/my-project/templates/product/new.html.twig
@@ -1,14 +1,14 @@
 {#/**#}
-{#*#}
-{#* @category   ProductCategory#}
-{#* @package    Virtua_DeleteProductCategory#}
+{#* VI-44 - Add and Edit gallery#}
+{#* @category   Template#}
+{#* @package    Gallery#}
 {#* @copyright  Copyright (c) Virtua#}
 {#* @author     Dawid Kruczek#}
 {#*/#}
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-    {{ parent() }}
-    <link href="{{ asset('/css/new.css') }}" rel="stylesheet">
+        {{ parent() }}
+        <link href="{{ asset('/css/new.css') }}" rel="stylesheet">
 {% endblock %}
 {% block title %}Dodaj nowy produkt{% endblock %}
 {% block body %}
@@ -19,7 +19,7 @@
     {% endfor %}
          <h1>Stworz nowy produkt</h1>
          {{ include('product/_form.html.twig') }}
-         <a href="{{ path('product_index') }}"><button type="submit" class="btn btn-info">Wroc do listy produktow</button></a>
+         <a href="{{ path('product_index') }}"><button type="submit" class="btn btn-info">Back to list</button></a>
     {% block javascripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="/js/addImages.js"></script>
